--- a/site/sass/_components.sass
+++ b/site/sass/_components.sass
@@ -127,4 +127,52 @@ a:focus
         background: #eaeff3
         padding-left: 50px
 
+/* ------------------ list content ------------------------ */
 
+.service-content
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  padding: 0
+  li
+    flex-basis: 46%
+    border-radius: 0 !important
+    list-style: none
+    margin-bottom: 50px
+    i
+      float: left
+      font-size: 50px
+    h4, p
+      margin-left: 80px
+    h4
+      color: #1c1c1c
+      font: 700 16px Raleway
+      text-transform: uppercase
+    p
+      color: #585858
+      font: 400 14px/28px "Open Sans"
+
+/* --------------------------- slider -------------------- */
+.slider-box
+  &-content
+    margin-bottom: 60px
+  &-list
+    position: relative
+    bottom: 10px
+    left: 0
+    z-index: 15
+    width: 100%
+    padding-left: 0
+    margin: 0
+    text-align: left
+    list-style: none
+    li
+      width: 10px
+      height: 10px
+      background: #36a8ff
+      margin: 0
+    .active
+      width: 10px
+      height: 10px
+      background: $active-color
+      margin: 0
