--- a/site/css/main.css
+++ b/site/css/main.css
@@ -311,7 +311,7 @@ a:focus {
     background: #000; }
     .banner-slider .slider-home-image div img {
       width: 100%;
-      opacity: 0.2; }
+      opacity: 0.15; }
     .banner-slider .slider-home-image div .container {
       position: absolute;
       top: 0;
@@ -433,8 +433,71 @@ a:focus {
 .home-news {
   position: relative;
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 80px;
   background: #eaeff3; }
+
+.home-news-content ul {
+  float: left;
+  width: 75px;
+  padding: 0; }
+  .home-news-content ul li {
+    list-style: none;
+    text-align: right; }
+    .home-news-content ul li p {
+      position: relative;
+      font: 400 14px/18px "Open Sans";
+      color: #565656;
+      border-bottom: 1px solid #ffaf36;
+      padding-bottom: 20px; }
+      .home-news-content ul li p::before {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        width: 15px;
+        height: 1px;
+        background: #000; }
+      .home-news-content ul li p span, .home-news-content ul li p i {
+        display: block;
+        margin-bottom: 5px;
+        font-size: 30px;
+        font-weight: 700;
+        color: #1c1c1c; }
+    .home-news-content ul li:last-child p {
+      border: none; }
+      .home-news-content ul li:last-child p::before {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        width: 0px;
+        height: 0px;
+        background: #000; }
+
+.home-news-content div {
+  margin-left: 95px;
+  margin-bottom: 40px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #d8dcdf; }
+  .home-news-content div:last-child {
+    border-bottom: none;
+    margin-bottom: 0; }
+  .home-news-content div img {
+    width: 100%;
+    margin-bottom: 40px; }
+  .home-news-content div h4 {
+    color: #1c1c1c;
+    font: 700 16px/24px Raleway;
+    margin-bottom: 0; }
+  .home-news-content div span {
+    color: #ffaf36;
+    font: 700 12px/18px "Open Sans"; }
+  .home-news-content div p {
+    color: #585858;
+    font: 400 14px/28px "Open Sans";
+    margin-top: 15px; }
+  .home-news-content div button, .home-news-content div a {
+    margin-top: 50px; }
 
 /* -------------------------------------------- */
 .home-partners {
