--- a/site/sass/_home.sass
+++ b/site/sass/_home.sass
@@ -156,6 +156,19 @@
   background: #eaeff3
   
 .home-news-content
+  &-image
+    margin-left: 100px
+    img
+      width: 100%
+      margin-bottom: 40px
+    h4
+      color: #1c1c1c
+      font: 700 16px/24px Raleway
+      margin-bottom: 0
+    p
+      color: #585858
+      font: 400 14px/28px "Open Sans"
+      margin-top: 15px
   ul
     float: left
     width: 75px
@@ -194,17 +207,14 @@
             width: 0px
             height: 0px
             background: #000
-  div
-    margin-left: 95px
+  .home-partners-content-no-image
+    margin-left: 20px
     margin-bottom: 40px
     padding-bottom: 20px
     border-bottom: 1px solid #d8dcdf
     &:last-child
       border-bottom: none
       margin-bottom: 0
-    img
-      width: 100%
-      margin-bottom: 40px
     h4
       color: #1c1c1c
       font: 700 16px/24px Raleway
@@ -218,19 +228,6 @@
       margin-top: 15px
     button, a
       margin-top: 50px
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* -------------------------------------------- */
 .home-partners
