--- a/site/sass/_components.sass
+++ b/site/sass/_components.sass
@@ -176,3 +176,65 @@ a:focus
       height: 10px
       background: $active-color
       margin: 0
+
+/* -------------------------- news rhombus ----------------- */
+
+.date-rhombus
+  position: absolute
+  top: 0
+  left: 20px
+  background: #ffaf36
+  padding: 15px 20px
+  p
+    position: relative
+    margin: 0
+    padding: 0
+    color: #1c1c1c
+    font: 700 13px/12px "Open Sans"
+  &:before
+    position: absolute
+    content: ""
+    top: 0
+    left: -20px
+    border-top: 20px solid #ffaf36
+    border-left: 20px solid transparent
+  &:before
+    position: absolute
+    content: ""
+    bottom: 0
+    left: -20px
+    border-bottom: 20px solid #ffaf36
+    border-left: 20px solid transparent
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
