--- a/site/sass/main.sass
+++ b/site/sass/main.sass
@@ -7,6 +7,7 @@
 
 @import home
 @import about
+@import news
 @import faq
 @import blog
 @import blog-post
@@ -14,6 +15,15 @@
 @import careers
 
 @import footer
+
+
+
+
+
+
+
+
+    
 
 
 
