--- a/site/css/main.css
+++ b/site/css/main.css
@@ -339,7 +339,7 @@ a:focus {
     background: #000; }
     .banner-slider .slider-home-image div img {
       width: 100%;
-      opacity: 0.25; }
+      opacity: 0.2; }
     .banner-slider .slider-home-image div .container {
       position: absolute;
       top: 0;
@@ -634,35 +634,53 @@ a:focus {
   padding-top: 100px;
   padding-bottom: 100px; }
 
-.clients-block {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 100px; }
-  .clients-block li {
-    flex-basis: 16.6%;
-    border-radius: 0;
-    list-style: none;
-    border: 1px solid #eaeff3;
-    text-align: center;
-    height: 180px; }
-    .clients-block li a {
-      display: inline-block;
-      line-height: 178px; }
+.slider-box-content {
+  margin-bottom: 60px; }
 
-.clients-navigation li {
-  display: inline-block;
-  margin: 0 !important; }
-  .clients-navigation li a {
-    display: inline-block;
+.slider-box-list {
+  position: relative;
+  bottom: 10px;
+  left: 0;
+  z-index: 15;
+  width: 100%;
+  padding-left: 0;
+  margin: 0;
+  text-align: left;
+  list-style: none; }
+  .slider-box-list li {
     width: 10px;
     height: 10px;
     background: #36a8ff;
-    border-radius: 50%;
-    cursor: pointer; }
-    .clients-navigation li a:hover {
-      background: #ffaf36; }
-  .clients-navigation li .active-list-clients {
-    background: #ffaf36; }
+    margin: 0; }
+  .slider-box-list .active {
+    width: 10px;
+    height: 10px;
+    background: #ffaf36;
+    margin: 0; }
+
+.about-partners-content {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0; }
+  .about-partners-content li {
+    position: relative;
+    flex-basis: 16.66%;
+    height: 170px;
+    list-style: none; }
+    .about-partners-content li:nth-child(1), .about-partners-content li:nth-child(2), .about-partners-content li:nth-child(3), .about-partners-content li:nth-child(4), .about-partners-content li:nth-child(5), .about-partners-content li:nth-child(6) {
+      border-top: 1px solid #eaeff3;
+      border-left: 1px solid #eaeff3;
+      border-bottom: 1px solid #eaeff3; }
+    .about-partners-content li:nth-child(6), .about-partners-content li:last-child {
+      border-right: 1px solid #eaeff3; }
+    .about-partners-content li:nth-child(7), .about-partners-content li:nth-child(8), .about-partners-content li:nth-child(9), .about-partners-content li:nth-child(10), .about-partners-content li:nth-child(11), .about-partners-content li:nth-child(12) {
+      border-left: 1px solid #eaeff3;
+      border-bottom: 1px solid #eaeff3; }
+    .about-partners-content li img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
 
 .news-section {
   position: relative;
