--- a/site/sass/_about.sass
+++ b/site/sass/_about.sass
@@ -73,37 +73,65 @@
   padding-top: 100px
   padding-bottom: 100px
 
-.clients
-  &-block
-    display: flex
-    flex-wrap: wrap
-    margin-bottom: 100px
+.slider-box
+  &-content
+    margin-bottom: 60px
+  &-list
+    position: relative
+    bottom: 10px
+    left: 0
+    z-index: 15
+    width: 100%
+    padding-left: 0
+    margin: 0
+    text-align: left
+    list-style: none
     li
-      flex-basis: 16.6%
-      border-radius: 0
-      list-style: none
-      border: 1px solid #eaeff3
-      text-align: center
-      height: 180px
-      a
-        display: inline-block
-        line-height: 178px
-  &-navigation
-    li
-      display: inline-block
-      margin: 0 !important
-      a
-        display: inline-block
-        width: 10px
-        height: 10px
-        background: #36a8ff
-        border-radius: 50%
-        cursor: pointer
-        &:hover
-          background: $active-color
-      .active-list-clients
-        background: $active-color
+      width: 10px
+      height: 10px
+      background: #36a8ff
+      margin: 0
+    .active
+      width: 10px
+      height: 10px
+      background: $active-color
+      margin: 0
 
+
+.about-partners-content
+  display: flex
+  flex-wrap: wrap
+  padding: 0
+  li
+    position: relative
+    flex-basis: 16.66%
+    height: 170px
+    list-style: none
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6)
+      border-top: 1px solid #eaeff3
+      border-left: 1px solid #eaeff3
+      border-bottom: 1px solid #eaeff3
+    &:nth-child(6),
+    &:last-child
+      border-right: 1px solid #eaeff3
+    &:nth-child(7),
+    &:nth-child(8),
+    &:nth-child(9),
+    &:nth-child(10),
+    &:nth-child(11),
+    &:nth-child(12)
+      border-left: 1px solid #eaeff3
+      border-bottom: 1px solid #eaeff3
+    img
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
 
 
 
