--- a/site/sass/_components.sass
+++ b/site/sass/_components.sass
@@ -207,6 +207,59 @@ a:focus
     border-left: 20px solid transparent
 
 
+/* -------------------- our clients section ---------------------- */
+.our-clients
+  position: relative
+  padding-top: 85px
+  padding-bottom: 100px
+
+.our-clients-comment
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  padding: 0
+  li
+    list-style: none
+    flex-basis: 28%
+    p
+      position: relative
+      color: #585858
+      font: 400 14px/28px "Open Sans"
+      margin-top: 50px
+      margin-bottom: 50px
+      &::before
+        content: "\201c"
+        position: absolute
+        font: 700 280px/240px "Lora"
+        color: #1c1c1c
+        opacity: .1
+        top: -60px
+        left: -8px
+    img
+      float: left
+      width: 70px
+      height: 70px
+      border-radius: 50%
+      border: none
+    .comment-name-people
+      display: block
+      margin-left: 100px
+      padding-top: 15px
+      color: #1c1c1c
+      font: 700 14px/20px Raleway
+    .comment-name-designation
+      display: block
+      margin-left: 100px
+      color: #585858
+      font: 400 14px/20px "Open Sans"
+  .comment-quotation-marks-center
+    p
+      &::before
+        color: #36a8ff
+  .comment-quotation-marks-right
+    p
+      &::before
+        color: #ffaf36
 
 
 
