--- a/site/sass/main.sass
+++ b/site/sass/main.sass
@@ -7,6 +7,7 @@
 
 @import home
 @import about
+@import services
 @import news
 @import faq
 @import blog
@@ -15,8 +16,6 @@
 @import careers
 
 @import footer
-
-
 
 
 
