add 2 page error & testimonial

--- a/site/sass/_components.sass
+++ b/site/sass/_components.sass
@@ -64,6 +64,13 @@ a:focus
     &::after
       left: 20px
       bottom: -100px
+  &-bottom-right
+    &::before
+      right: 70px
+      bottom: -100px
+    &::after
+      right: 20px
+      bottom: -100px
 
 /* ------------------------------------- replay -------------------------- */
 
