--- a/site/sass/_home.sass
+++ b/site/sass/_home.sass
@@ -172,8 +172,10 @@
       color: #585858
       font: 400 14px/28px "Open Sans"
       margin-top: 15px
-    button, a
-      margin-top: 50px
+    button,
+    a
+      display: inline-block
+      margin-top: 40px
 
 /* -------------------------------------------- */
 .home-partners
