--- a/site/sass/main.sass
+++ b/site/sass/main.sass
@@ -14,22 +14,10 @@
 @import blog-post
 @import contact
 @import careers
+@import testimonials
+@import error
 
 @import footer
-
-
-
-
-
-
-    
-
-
-
-
-
-
-
 
 
 
